feat(users): add endpoint to get user info and token
